setup for next steps

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <title></title>
   <style>
-    .lines { height: 20em; }
+
+    .lines {
+      height: 20em;
+    }
+
     input[type="text"] {
       width: 500px;
       padding: 5px;
     }
+    
   </style>
 </head>
 <body>
